--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,9 @@
 {
-  "rewrites": [
-    { "source": "/bfhl", "destination": "/api/bfhl" }
+  "version": 2,
+  "builds": [
+    { "src": "index.js", "use": "@vercel/node" }
+  ],
+  "routes": [
+    { "src": "/api/(.*)", "dest": "index.js" }
   ]
 }
